Species page: fix spacing between sidebar maps. (see #724)

--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -118,7 +118,7 @@ body#species .section {
 body#species #maps, body#species #side {
     position: absolute;
     h2 {
-        font-size: 16px;
+        font-size: 15px;
         margin: 0 0 4px 0;
     }
 }
@@ -153,7 +153,7 @@ body#species #main .nemap h2 + p, body#species #main .namap h2 + p {
 }
 
 body#species #side {
-    top: 850px;   /* remaining side content is positioned
+    top: 780px;   /* remaining side content is positioned
                      further down to leave room for maps
                      in full-width layout */
 }
